--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import '../node_modules/bulma/bulma.scss';
+@import "ngx-toastr/toastr";
 
 .alt-gradient-button {
   border: none;
