Finish basic features before deadline

--- a/client/src/app/stats/stats.component.html
+++ b/client/src/app/stats/stats.component.html
@@ -1,20 +1,20 @@
 <div class="section" id="stats-section">
-  <div class="container" id="stats-up-container">
-    <div class="stats-columns">
-      <div class="stat-column">
-        <p class="stat-info">Tasks</p>
-        <p class="stat-content">16</p>
-      </div>
-      <div class="stat-column">
-        <p class="stat-info">Urgent</p>
-        <p class="stat-content">16%</p>
-      </div>
-      <div class="stat-column">
-        <p class="stat-info">Completed</p>
-        <p class="stat-content">84%</p>
-      </div>
-    </div>
-  </div>
+<!--  <div class="container" id="stats-up-container">-->
+<!--    <div class="stats-columns">-->
+<!--      <div class="stat-column">-->
+<!--        <p class="stat-info">Tasks</p>-->
+<!--        <p class="stat-content">16</p>-->
+<!--      </div>-->
+<!--      <div class="stat-column">-->
+<!--        <p class="stat-info">Urgent</p>-->
+<!--        <p class="stat-content">16%</p>-->
+<!--      </div>-->
+<!--      <div class="stat-column">-->
+<!--        <p class="stat-info">Completed</p>-->
+<!--        <p class="stat-content">84%</p>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
   <div class="container" id="stats-lower-container">
     <form [formGroup]="categoryForm" (ngSubmit)="onSubmit()">
       <div class="new-category-form">
