--- a/client/src/app/todos/todos.component.html
+++ b/client/src/app/todos/todos.component.html
@@ -18,131 +18,48 @@
 
       <div class="column">
 
-        <div class="todo-list">
-          <div class="todo-item">
-            <div class="check-box"> <i class="material-icons">check</i> </div>
-            <div class="todo-content">
-              <div class="todo-name">Name</div>
-              <p class="todo-desc">This is a description. This will apply the justified text alignment to every paragraph on your site, ensuring a consistent look and feel across all textual content.</p>
-              <div class="todo-meta">
-                <div class="todo-info">
-                  <p class="todo-due">Due: 04/04/04 12:45</p>
-                  <p class="todo-category"> Category 1</p>
-                </div>
-                <div class="todo-controls">
-                  <div class="todo-edit"><i class="material-icons">edit</i></div>
-                  <div class="todo-delete"><i class="material-icons">delete</i></div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="todo-item">
-            <div class="check-box"> <i class="material-icons">check</i> </div>
-            <div class="todo-content">
-              <div class="todo-name">Name</div>
-              <p class="todo-desc">This is a description. This will apply the justified text alignment to every paragraph on your site, ensuring a consistent look and feel across all textual content.</p>
-              <div class="todo-meta">
-                <div class="todo-info">
-                  <p class="todo-due">Due: 04/04/04 12:45</p>
-                  <p class="todo-category"> Category 1</p>
-                </div>
-                <div class="todo-controls">
-                  <div class="todo-edit"><i class="material-icons">edit</i></div>
-                  <div class="todo-delete"><i class="material-icons">delete</i></div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="todo-item">
-            <div class="check-box"> <i class="material-icons">check</i> </div>
-            <div class="todo-content">
-              <div class="todo-name">Name</div>
-              <p class="todo-desc">This is a description. This will apply the justified text alignment to every paragraph on your site, ensuring a consistent look and feel across all textual content.</p>
-              <div class="todo-meta">
-                <div class="todo-info">
-                  <p class="todo-due">Due: 04/04/04 12:45</p>
-                  <p class="todo-category"> Category 1</p>
-                </div>
-                <div class="todo-controls">
-                  <div class="todo-edit"><i class="material-icons">edit</i></div>
-                  <div class="todo-delete"><i class="material-icons">delete</i></div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="todo-item">
-            <div class="check-box"> <i class="material-icons">check</i> </div>
-            <div class="todo-content">
-              <div class="todo-name">Name</div>
-              <p class="todo-desc">This is a description. This will apply the justified text alignment to every paragraph on your site, ensuring a consistent look and feel across all textual content.</p>
-              <div class="todo-meta">
-                <div class="todo-info">
-                  <p class="todo-due">Due: 04/04/04 12:45</p>
-                  <p class="todo-category"> Category 1</p>
-                </div>
-                <div class="todo-controls">
-                  <div class="todo-edit"><i class="material-icons">edit</i></div>
-                  <div class="todo-delete"><i class="material-icons">delete</i></div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="todo-item">
-            <div class="check-box"> <i class="material-icons">check</i> </div>
-            <div class="todo-content">
-              <div class="todo-name">Name</div>
-              <p class="todo-desc">This is a description. This will apply the justified text alignment to every paragraph on your site, ensuring a consistent look and feel across all textual content.</p>
-              <div class="todo-meta">
-                <div class="todo-info">
-                  <p class="todo-due">Due: 04/04/04 12:45</p>
-                  <p class="todo-category"> Category 1</p>
-                </div>
-                <div class="todo-controls">
-                  <div class="todo-edit"><i class="material-icons">edit</i></div>
-                  <div class="todo-delete"><i class="material-icons">delete</i></div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="todo-item">
-            <div class="check-box"> <i class="material-icons">check</i> </div>
-            <div class="todo-content">
-              <div class="todo-name">Name</div>
-              <p class="todo-desc">This is a description. This will apply the justified text alignment to every paragraph on your site, ensuring a consistent look and feel across all textual content.</p>
-              <div class="todo-meta">
-                <div class="todo-info">
-                  <p class="todo-due">Due: 04/04/04 12:45</p>
-                  <p class="todo-category"> Category 1</p>
-                </div>
-                <div class="todo-controls">
-                  <div class="todo-edit"><i class="material-icons">edit</i></div>
-                  <div class="todo-delete"><i class="material-icons">delete</i></div>
-                </div>
-              </div>
-            </div>
-          </div>
+        <app-task-list></app-task-list>
 
-          <div class="todo-item completed">
+<!--        <div class="todo-list">-->
+<!--          <div class="todo-item">-->
+<!--            <div class="check-box"> <i class="material-icons">check</i> </div>-->
+<!--            <div class="todo-content">-->
+<!--              <div class="todo-name">Name</div>-->
+<!--              <p class="todo-desc">This is a description. This will apply the justified text alignment to every paragraph on your site, ensuring a consistent look and feel across all textual content.</p>-->
+<!--              <div class="todo-meta">-->
+<!--                <div class="todo-info">-->
+<!--                  <p class="todo-due">Due: 04/04/04 12:45</p>-->
+<!--                  <p class="todo-category"> Category 1</p>-->
+<!--                </div>-->
+<!--                <div class="todo-controls">-->
+<!--                  <div class="todo-edit"><i class="material-icons">edit</i></div>-->
+<!--                  <div class="todo-delete"><i class="material-icons">delete</i></div>-->
+<!--                </div>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
 
-            <div class="check-box"> <i class="material-icons">check</i> </div>
-            <div class="todo-content">
-              <div class="todo-name">Name</div>
-              <p class="todo-desc">This is a description. This will apply the justified text alignment to every paragraph on your site, ensuring a consistent look and feel across all textual content.</p>
-              <div class="todo-meta">
-                <div class="todo-info">
-                  <p class="todo-due">Due: 04/04/04 12:45</p>
-                  <p class="todo-category"> Category 1</p>
-                </div>
-                <div class="todo-controls">
-                  <div class="todo-edit"><i class="material-icons">edit</i></div>
-                  <div class="todo-delete"><i class="material-icons">delete</i></div>
-                </div>
-              </div>
-            </div>
+<!--          <div class="todo-item completed">-->
+
+<!--            <div class="check-box"> <i class="material-icons">check</i> </div>-->
+<!--            <div class="todo-content">-->
+<!--              <div class="todo-name">Name</div>-->
+<!--              <p class="todo-desc">This is a description. This will apply the justified text alignment to every paragraph on your site, ensuring a consistent look and feel across all textual content.</p>-->
+<!--              <div class="todo-meta">-->
+<!--                <div class="todo-info">-->
+<!--                  <p class="todo-due">Due: 04/04/04 12:45</p>-->
+<!--                  <p class="todo-category"> Category 1</p>-->
+<!--                </div>-->
+<!--                <div class="todo-controls">-->
+<!--                  <div class="todo-edit"><i class="material-icons">edit</i></div>-->
+<!--                  <div class="todo-delete"><i class="material-icons">delete</i></div>-->
+<!--                </div>-->
+<!--              </div>-->
+<!--            </div>-->
 
 
-          </div>
-        </div>
+<!--          </div>-->
+<!--        </div>-->
 
       </div>
 
