--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -22,3 +22,16 @@
   }
 }
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.cdk-overlay-container{
+  position: absolute; /* or position: fixed; */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 50%;
+
+}
