--- a/client/src/app/todos/todos.component.css
+++ b/client/src/app/todos/todos.component.css
@@ -10,6 +10,7 @@
     color: white;
     text-shadow: #006eff;
   }
+
 }
 
 #add-new-form {
@@ -73,6 +74,7 @@
     max-height: 100%;
     width: 90%;
     overflow-y: scroll;
+    scrollbar-width: none;
   }
 
 }
