UI task-description fix

--- a/client/src/app/task-list/task-list.component.html
+++ b/client/src/app/task-list/task-list.component.html
@@ -7,7 +7,7 @@
                     <div class="check-box"> <i class="material-icons">check</i> </div>
                     <div class="todo-content">
                         <h3 class="todo-name">{{ task.taskName }}</h3>
-                        <p class="todo-desc">This is a description. This will apply the justified text alignment to every paragraph on your site, ensuring a consistent look and feel across all textual content.</p>
+                        <p class="todo-desc">{{ task.taskDescription }}</p>
                         <div class="todo-meta">
                             <div class="todo-info">
                                 <p class="todo-due">Due: {{ task.taskDate }} {{ task.taskTime }}</p>
